--- a/MadridShops-Pro/View/Base.lproj/LaunchScreen.storyboard
+++ b/MadridShops-Pro/View/Base.lproj/LaunchScreen.storyboard
@@ -28,7 +28,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.8900398612" green="0.23870670799999999" blue="0.19441381099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.88627450980392153" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="9Pa-5Q-06X" firstAttribute="top" secondItem="Y0r-iH-eSE" secondAttribute="bottom" priority="998" constant="81.5" id="9PT-4m-Stj"/>
                             <constraint firstItem="9Pa-5Q-06X" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="HSv-y2-68P"/>
